--- a/Project_transport_optimisation/packages.config
+++ b/Project_transport_optimisation/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DnsClient" version="1.3.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="GeoAPI" version="1.7.5" targetFramework="net472" />
   <package id="GeoAPI.CoordinateSystems" version="1.7.5" targetFramework="net472" />
